--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,8 @@
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
-      fetch('http://localhost:3000/login', {
+      //fetch('http://localhost:3000/login', {
+      fetch('https://intranet-logis-backend-production.up.railway.app/login.html/login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ email, password })
