--- a/public/login.html
+++ b/public/login.html
@@ -25,7 +25,7 @@
       const password = document.getElementById('password').value;
 
       //fetch('http://localhost:3000/login', {
-      fetch('https://intranet-logis-backend-production.up.railway.app/login.html/login', {
+      fetch('https://intranet-logis-backend-production.up.railway.app/login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ email, password })
